# mpolynomials

./: .gitignore  CHANGELOG.md  README.md  mpolynomials.cabal  stack.yaml
src/: MultiPol.hs  MultiPol2.hs  MultiPol_old.hs
src/Math/Algebra/: MultiPol.hs
trash/: trash.hs  trash.md
