name:                mpolynomials
version:             0.1.0.0
synopsis:            Simple multivariate polynomials.
-- description:
homepage:            https://github.com/stla/mpolynomials#readme
license:             GPL-3
license-file:        LICENSE
author:              Stéphane Laurent
maintainer:          laurent_step@outlook.fr
copyright:           2022 Stéphane Laurent
category:            Math
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     MultiPol
                     , MultiPol2
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , numeric-prelude
                     , extra
  other-extensions:    ScopedTypeVariables
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/stla/mpolynomials
