name:                mpolynomials
version:             0.1.0.0
synopsis:            Simple multivariate polynomials.
description:         Manipulation of multivariate polynomials on a ring.
homepage:            https://github.com/stla/mpolynomials#readme
license:             GPL-3
license-file:        LICENSE
author:              Stéphane Laurent
maintainer:          laurent_step@outlook.fr
copyright:           2022 Stéphane Laurent
category:            Math, Algebra
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Math.Algebra.MultiPol
  build-depends:       base >= 4.7 && < 5
                     , containers >= 0.6.4.1 
                     , numeric-prelude >= 0.4.4
                     , extra >= 1.7.10
                     , text >= 1.2.5.0
  other-extensions:    ScopedTypeVariables
                     , FlexibleInstances
                     , MultiParamTypeClasses
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/stla/mpolynomials
